--- a/css/main.css
+++ b/css/main.css
@@ -22,14 +22,34 @@ html, body {
 }
 
 header {
-    grid-area: header;
     margin: 0;
+    padding: 0;
     font-size: 2em;
+    grid-area: header;
 }
 
 nav {
+    margin: 0;
+    padding: 1%;
     grid-area: nav;
     background-color: rgba(0, 0, 0, 0.2);
+}
+
+nav a {
+    margin: 0;
+    padding: 0;
+    font-size: 1.5em;
+    color: #f0f0f0;
+    text-decoration: none;
+    padding: 1%;
+}
+
+nav a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+nav .handle {
+    display: none;
 }
 
 main {
@@ -72,6 +92,36 @@ footer {
         width: 100%;
     }
 
+    nav {
+        margin: 0;
+        padding: 0;
+    }
+
+    nav .handle {
+        display: block;
+        margin: 0;
+        padding: 0;
+        font-size: 2em;
+        color: #f0f0f0;
+        text-decoration: none;
+        padding: 1%;
+        cursor: pointer;
+    }
+
+    nav .handle:hover {
+        background-color: rgba(255, 255, 255, 0.2);
+    }
+
+    nav .navbar {
+        display: none;
+        font-size: 1.5em;
+    }
+
+    nav .show-navbar {
+        display: flex;
+        flex-direction: column;
+    }
+
     main {
         text-align: center;
     }
@@ -87,11 +137,5 @@ footer {
 
     p {
         font-size: 1.3em;
-    }
-}
-
-@media screen and (min-width: 960px) {
-    html, body {
-        height: 100%;
     }
 }
